<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFont">


    <ImageView
        android:id="@+id/imgEmptyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/brandLogoApp"
        android:src="@drawable/img_list_empty" />

    <TextView
        android:id="@+id/tv_empty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgEmptyList"
        android:text="@string/empty_list"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_empty_text_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_empty_text"
        android:text="@string/text_empty_sec"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="19dp"
        android:layout_centerInParent="true"
        android:layout_height="19dp"
        android:layout_below="@+id/tv_empty_text_sec"
        android:background="@drawable/ic_reload"
        android:layout_marginTop="7dp"
        android:textColor="@color/textSecond"
        android:textSize="@dimen/fontDefaultMain"
        />
    <TextView
        android:id="@+id/tv_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reload"
        android:text="@string/btn_reload"
        android:textAlignment="center"
        android:textSize="@dimen/fontDefaultSubText3" />
</RelativeLayout>


