<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photoProfile"
        android:layout_width="66dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/profileDescription"
        android:src="@drawable/ic_account"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFont"
        android:text="@string/userMailTemp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/tvUserNameProfile"
        android:layout_alignStart="@+id/tvUserNameProfile" />

    <TextView
        android:id="@+id/tvUserNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="17dp"
        android:text="@string/userNameTemp"
        android:textColor="@color/colorFont"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/photoProfile"
        android:layout_marginStart="8dp" />


</RelativeLayout>