<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_endereco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFont"
    tools:context=".activities.AddEnderecoActivity">


    <LinearLayout
        android:id="@+id/componenteActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/componenteActionBar"
        android:background="@color/colorFont"
        android:descendantFocusability="beforeDescendants"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/componentesLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorFont"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/appbar_padding_top">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEdtLogradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtLogradouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitLogradouro"
                        android:inputType="text"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEdtNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitNumero"
                        android:inputType="text"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEdtBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitBairro"
                        android:inputType="text"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEditComplemento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtComplemento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitComplemento"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnCadastrarEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="3dp"
                android:height="@dimen/LagHeigth"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_cadastrar_endereco"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/fontLogin" />


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
